# b2l-tools

./: .gitignore  Chicken.b2l  Chicken.b2l.mat  Makefile  Makefile.am  Makefile.in  Readme.md  TODO  autogen.sh  b2l-setenv.sh.in  b2l.c  b2l.h  b2l_material_editor.c  b2l_material_editor.lua  b2l_model_viewer.c  b2l_scene_viewer.c  box.b2l  box.b2l.mat  configure.ac  example.c  geometry.c  geometry.h  glbindify.cpp  glplatform-glcore.c  glplatform-glx.h  glplatform-linux.c  glplatform-wgl.c  glplatform-win32.c  glplatform.c  glplatform.h  glsl.lex  glsl.y  glsl_common.h  glsl_meta_filter.lex  gltext.c  gltext.cpp  gltext.h  gltext.hpp  gltext.pc.in  gltext_capi.c  (+19 more)
examples/: .gitignore  Makefile  Makefile.am  simple.c  simple.cpp  terminal.cpp  text_stream.cpp  transforms.cpp
glplatform/: Makefile.am  Readme.md  configure.ac  glplatform-linux.c  glplatform-win32.c
glplatform/include/: glplatform.h
glplatform/include/glbindings/: glplatform-glx.h  glplatform-wgl.h
glplatform/include/math/: math3d.h
glplatform/src/: glplatform-win32.c
glplatform/src/examples/: text_render.c
glplatform/src/glbindings/: glplatform-glx.c
glplatform/src/math/: math3d.c
glplatform/src/text/: Readme.md
glplatform/windows/: glplatform-glcore.h  glplatform-glx.c  glplatform-wgl.c  glplatform.sln  glplatform.vcxproj
glplatform/windows/simple_window/: simple_window.vcxproj
glplatform/windows/text_render/: text_render.vcxproj.filters
glsl-parser/: AstNodes.md  glsl.lex  glsl.y  glsl_ast.c  glsl_regen.c
include/glbindings/: glplatform-glcore.h
include/math/: math3d.h
lgi/lgi/: Makefile  callable.c  core.c  core.lua
lua/src/: luac
material-editor/: .gitignore  Chicken.b2l  Makefile.in  b2l-material-editor.sh.in  b2l_material_editor.c  b2l_material_editor.lua  configure.ac  glsl.lex  glsl.y  test.frag.glsl  test.vert.glsl
material-editor/lua/src/: lua
math/: math3d.h
src/examples/: example.c  simple_window.c
src/math/: math3d.c
src/text/: .gitignore  edtaa3func.c  gltext.c
src/text/examples/: Makefile.am  simple.c
tests/: test.y
windows/: glplatform-glcore.c  glplatform-wgl.c  glplatform-wgl.h  glplatform.sln  glplatform.vcxproj  glplatform.vcxproj.filters
windows/simple_window/: simple_window.vcxproj.filters
windows/text_render/: text_render.vcxproj
